--- a/workspace/GTAcampuS/res/values/strings.xml
+++ b/workspace/GTAcampuS/res/values/strings.xml
@@ -1,9 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">GTAcampuS</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="alarmtitle">Choose the time for alarm</string>
+    <string name="init_text">Please provide the following details to initialize the application. If you skip this step default values will be used for the slots and timings.</string>
+    <string name="rights">All rights reserved</string>
+    <string name="copyright">Copyright © 2013</string>
+    <string name="developer">Developed by Godly T.Alias</string>
+    <string name="snooze">SNOOZE</string>
+    <string name="stop">STOP</string>
+    <string name="alarm_title">Custom Alarm</string>
 
 </resources>
