--- a/workspace/GTAcampuS/res/values/strings.xml
+++ b/workspace/GTAcampuS/res/values/strings.xml
@@ -100,39 +100,40 @@
     <string name="nextalert">NEXT ALERT</string>
     <string name="emptystring"/>
     <string name="help">
-This application consists mainly features like alarms, notes, convertor and a calculator.\n
+   GTAcampuSv1.0 consists of features like alerts, time-table of classes, notes, convertor and calculator.\n
 \n<b><u>INITIALIZE</u></b>\n
-\tOn installing the application you will be requested to initialize the application. The values you enter can\'t be changed later unless you re-install the application. You will be asked to set the master password also which should not be forgotten, if you forget the password then you need to re-install the application to access administrator features.\n
+\tOn installing the application you will be requested to initialize the application. The values you enter can\'t be changed later unless you re-install the application. You will be asked to set the master password also which should not be forgotten, if you forget the password then you need to re-install the application and set the password again in order to access administrator features.\n
 \n\n<b><u>MENU ITEMS</u></b>
 \n  1. EXIT\n
 \tOn clicking on this menu item you will be able to exit the application\n
 \n	2. BACKUP\n
-\tThis menu feature helps you to backup the whole database of your application so that you will be able to restore your alerts, courses and notes. Backup will be made in your SD card as a folder.\n
+\tThis menu feature helps you to backup the whole database of your application so that you will be able to restore your alerts, courses and notes. Backup will be made in your SD card as a folder named \'GTAcampuS\'. The files in that folder should not be deleted/edited.\n
 \n  3. RESTORE\n
-\tThis menu feature restores the application which restores the deleted alerts, courses and notes if you have a backup of it in your SD card.\n
+\tThis menu feature restores the application which restores the deleted alerts, courses and notes if you have a backup in your SD card. If the backup folder in your SD card is corrupted by any external activities, the application will fail to restore the database successfully. On restoring you will lost all the current data except notes. If you had initialized your application with different timings than in the backup made, on restoring the timings will be changed to that given in the backup image.\n
 \n  4. SETTINGS\n
-\tThis menu feature includes options to turn off/on course alerts, notifications and also to change your password. You can also set here the time in advance of the course time you need to get alert, the snooze-timeout for courses and also interval length which will help you to avoid getting alerts for classes following breaks with the duration of entered time.\n
+\tThis menu feature includes options to turn on/off course alerts, notifications and also an option to change your master password. You can also set how much time before the course time you need to get alert, the snooze-timeout for course alerts and also interval length which will help you to avoid getting alerts for classes following breaks with the entered duration. Application will skip alerting for the course only if you hadn\'t bunked the previous class.\n
+\nIf you are stopping course alerts pressing the \'On the way\' button of course alert window, then application will turn off the volumes of your device and also will turn off the course alerts by itself so that your device won\'t make any disturbances in class. After the class-time application itself will set back the device sounds to maximum and will turn on the course alerts.\n
 
 \n\n<b><u>ALERTS</u></b>\n
-\tYou can set custom tasks, alarms in addition to the course alerts that will be set by default on entering the course details. If you want to update any features of alerts like snooze time-out, math-mode, shake-mode, enabling/disabling etc., you can set it by  by clicking on the respective alert or in case of course alerts go to settings menu.\n
+\tYou can set custom tasks / alarms in addition to the course alerts which are set by default on entering the course details. If you want to update any options of alerts like snooze time-out, math-mode, shake-mode, enable/disable etc., you can get the options window of the alert  by clicking on the respective alert, in case of course alerts go to settings menu. On launching the alerts the alarm tone start from a low volume which will increase gradually to the maximum. If the alarm volume is set at level 1 then application won\'t increase the volume of alarm and will alert in the same volume until user input is received.\n
 \n<b>SHAKE MODE</b>\n
-\tIf you set this mode then you will be able to snooze your alarm by just shaking the device\n
+\tIf you set this mode enabled, then you will be able to snooze your alarm by just shaking the device\n
 \n<b>MATH MODE</b>\n
-\tIf this mode is set, you need to solve a maths problem of multiplication with single digit numbers in order to stop the alert\n
+\tIf this mode is set enabled, on stopping an alert application will put up a single digit multiplication problem and you need to solve the problem correctly in order to stop the alert\n
 \n<b>CUSTOM TASKS</b>\n
-\tIf you set a task with a past time, you won\'t get alert ever even though the alert is enabled. An alert of type \'task\' will be automatically disabled on alerting, so if you need to set an alert again with the same item, you need to take care to enable the alert, else you won\'t get the alert.\n
+\tIf you set a task with a past time, you won\'t get alert ever even though the alert is enabled. An alert of type \'task\' will be automatically disabled on launching the alert, so if you need to set an alert again with the same task item, you need to re-enable the alert, else you won\'t get the alert.\n
 \n\n<b><u>TIME TABLE</u></b>\n
-\tThis consists of the full view of your weekly class hours. Free hours are represented by a \'-\'. The no:of hours is set on initializing the application which can\'t be changed later. You can see the course details and bunk details by a long click on the corresponding course\n
+\tThis consists of the full view of your weekly class hours. Free hours are represented by a \'-\' symbol which will be replaced by course names on adding a course. The no:of hours is set on initializing the application which can\'t be changed later. You can see the course details and bunk count by a long click on the corresponding course.\n
 \n\n<b><u>COURSES</u></b>\n
-\tIn the course tab you will be able to add courses. Here you will have to enter the course name, code and teacher\'s name which can\'t be edited later. The timings you enter here will be visible in the time-table view\n
+\tIn the course tab you will be able to add courses. Here you will have to enter the course name, code and teacher\'s name which can\'t be edited later. In the time-table view courses will appear in the corresponding timings you enter here.\n
 \n\n<b><u>NOTES</u></b>\n
-\tUsing this option you can make short notes or memos. You will be able to edit the note later by a long click on the respective note.\n
+\tUsing this option you can make short notes or memos which can be read later. You will be able to edit the note later by a long click on the respective note.\n
 \n\n<b><u>BUNK-O-METER</u></b>\n
-\tBunk-O-Meter stores your bunk statistics. It will display the coursename as well as the no:of classes bunked. If you make a click on the respective course you will be able to see the date and time you bunked the course. If you just want to add a bunk to a course, you can add a single bunk to a course by a long click.\n
+\tBunk-O-Meter stores your bunk statistics. It will display the course name as well as the no:of classes bunked. If you click on the respective course you will be able to see the date and the system time at which you added the bunk to the course. If you just want to add a bunk to a course, you can increment bunk count to a course by a long click on the respective course.\n
 \n\n<b><u>CONVERTOR</u></b>\n
-\tThis tool helps you to convert values from one unit to other. You can select the main section in the drop-down menu on top and the units to be converted in the drop-down menu in the bottom.\n
+\tThis tool helps you to convert values from one unit to other. You can select the main section in the drop-down menu on top and the units to be converted in the drop-down menu in the bottom. Convertor will automatically put results at the moment you press the done button of the virtual keyboard. If the results are big numbers it will come in the exponent format (base E power).\n
 \n\n<b><u>CALCULATOR</u></b>\n
-\tThis calculator can take digits of very high length. The output will be made in the exponent format(number E number).\n
+\tThis calculator can deal calculations with very big digits. If the results are big numbers it will come in the exponent format (base E power). The final result will be toasted also. The calculator also includes options for finding GCD(Greatest Common Divisor - HCF) and LCM(Least Common Multiple).\n
 </string>
     <string name="close">Close</string>
     <string name="addnote">ADD NOTE</string>
