--- a/workspace/RadioAVIV/res/values/strings.xml
+++ b/workspace/RadioAVIV/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RadioAVIV</string>
+    <string name="app_name">AVIV</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="about"><b>Good news to all young music freaks!.</b>\n\n
 <b>Introducing to you Radio Aviv 97.6</b> \n\t playing pop , rock, hip-hop and all genres of music with a variety of live performances too that brings to you back to the basics of life we often neglect. We present to you Love, motivation, Inspiration and everything else that gives your soul the kick to live with a better attitude than yesterday.
 \n\n
-<b>Source of Inspiration :</b>\n\t The heavens proclaim his righteousness, and all peoples see his glory. (Psalm 97:6) The above verse from the Holy Bible is the inspiration for frequency 97.6 being chosen for this online Radio. It was when the founder of this channel spent some time in prayer about giving life to the Dream-Radio, that God spoke through this verse to him. And hence, an answer to many prayers and a dream come-true for numerous young music Listeners is now coming into being.
+<b>Source of Inspiration :</b>\n\t The heavens proclaim his righteousness, and all peoples see his glory. (Psalm 97:6)\nThe above verse from the Holy Bible is the inspiration for frequency 97.6 being chosen for this online Radio. It was when the founder of this channel spent some time in prayer about giving life to the Dream-Radio, that God spoke through this verse to him. And hence, an answer to many prayers and a dream come-true for numerous young music Listeners is now coming into being.
 \n\n
 <b>AVIV- A new Beginning :</b>\n\t The caption \'Aviv \' is of Hebrew origin and means \'Spring Time\' . The Spring season marks the return of the Sun shining in all its brightness and giving birth to beautiful flowers and new plants, basically bringing color and life everywhere. This is exactly what we are aiming to bring across with this new project. i.e. when Christ being our Sun of righteousness shines on us, our Spirits are revived and we are a new creation with his presence . Our goal is to reach as many youths and get them a taste of this new experience in the world of renewed soul enhancing wholesome clean music.
 \n\n
